--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CONNECT='mongodb+srv://Benjamin:g1pMHnukxxja3vWQ@cluster0.zcdvw.mongodb.net/test?retryWrites=true&w=majority'
+TOKEN='RANDOM_TOKEN_SECRET'
